<resources>
    <string name="app_name">Vlover</string>
    <string name="title_activity_iniciar_sesion">Iniciar Sesion</string>

    <!-- Strings related to login -->
    <string name="action_sign_in_short">Registrarse</string>
    <string name="error_invalid_email">Esta dirección de correo electrónico no es válida</string>
    <string name="error_invalid_password">Esta contraseña es muy corta</string>
    <string name="error_incorrect_password">Esta contraseña es incorrecta</string>
    <string name="error_field_required">Este campo es requerido</string>
    <string name="permission_rationale">"Los permisos de contactos son necesarios para proporcionar el correo electrónico"
    </string>
    <string name="male">Hombre</string>
    <string name="female">Mujer</string>
    <string name="email">Correo electronico</string>
    <string name="clave">Contraseña</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="cargando">Cargando</string>
    <string name="un_momento">Un momento…</string>
    <string name="error_internet">Internet no disponible!</string>
    <string name="error">Error de correo o contraseña</string>
    <string name="completarcampos">Completa todos los campos</string>
    <string name="inicio">Inicio</string>
    <string name="avisos">Avisos</string>
    <string name="lugares">Lugares</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="cuenta">Cuenta</string>
    <string name="hola_mundo">Hola Mundo!</string>
    <string name="registrar">Registrar</string>
    <string name="cambiar_clave">¿Olvidaste tu contraseña?</string>
    <string name="title_activity_mensajes">MensajesActivity</string>
    <string name="title_activity_edit_account">Editar cuenta</string>
    <string name="edit_account_name">Escribe tu nombre completo</string>
    <string name="edit_account_phone">Numero telefonico</string>
    <string name="error_contraseña">Ingresa bien tu contraseña</string>
    <string name="error_email">Ingresa un correo valido</string>
    <string name="ingresatucorreo">Por favor ingresa tu correo</string>
    <string name="ingresatuclave">Por favor ingresa tu contraseña</string>
    <string name="ingresatusnombres">Por favor ingresa tus nombres</string>
    <string name="bienvenido">Bienvenido  ­</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="enverdaddeceacerrarsesion">¿En verdad deseas cerrar sesion?</string>
    <string name="cerrarsesion">Cerrar Sesion</string>
    <string name="registrando">Registrando…</string>
    <string name="birthday">Fecha de nacimiento</string>
    <string name="buscar">Buscar</string>
    <string name="url_global">http://vlover.ruvnot.com/</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
