<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/capa1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Login.IniciarSesion">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context="demo.ayaz.demo.MainActivity">

        <TextView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:elegantTextHeight="true"
            android:elevation="25dp"
            android:fontFamily="cursive"
            android:text="@string/app_name"
            android:textColor="@color/colorAccent"
            android:textSize="75sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/email"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_below="@+id/imageView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="43dp"
            android:background="#11000000"
            android:drawableLeft="@drawable/email"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/clave"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_alignStart="@+id/email"
            android:layout_below="@+id/email"
            android:layout_marginTop="29dp"
            android:background="#11000000"
            android:drawableLeft="@drawable/candado_bloqueado"
            android:ems="10"
            android:hint="@string/clave"
            android:inputType="textPassword" />

        <android.support.v7.widget.CardView
            android:clickable="true"
            android:longClickable="true"
            android:id="@+id/iniciar"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:layout_above="@+id/registrar"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="31dp"
            app:cardBackgroundColor="@color/colorAccent"
            app:cardCornerRadius="25dp"
            app:cardElevation="10dp"
            android:focusable="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/iniciar_sesion"
                    android:textColor="#fff"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/registrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/linearLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="6dp"
            android:text="@string/registrar" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignLeft="@+id/imageView"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/imageView"
            android:orientation="horizontal">

        </LinearLayout>

        <TextView
            android:id="@+id/cambiar_clave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/clave"
            android:layout_below="@+id/clave"
            android:layout_marginEnd="9dp"
            android:layout_marginTop="13dp"
            android:text="@string/cambiar_clave" />
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
